syntax = "proto3";

option java_package = "com.aaa";
option java_multiple_files = true;

import "StudentPB.proto";

package com.aaa;


message SchoolPB {
  string name = 1;
  repeated com.abc.StudentPB students = 2;
  
  map<string, com.abc.StudentPB> nameToStudents = 3;
  map<fixed64, com.abc.StudentPB> idToStudents = 4;
  repeated int32 ids = 5;
}

message CityPB {
  string name = 1;
  repeated SchoolPB students = 2;
}